--- a/src/style.css
+++ b/src/style.css
@@ -75,6 +75,10 @@ footer{
   padding: 1.5rem;
 }
 
+header{
+  height: 100px;
+}
+
 header img{
   width: 60%;
 }
@@ -95,6 +99,7 @@ footer{
   flex-direction: column;
   align-items: center;
   row-gap: 1rem;
+  height: 227px;
 }
 
 footer img{
@@ -117,6 +122,10 @@ footer ul{
 }
 
 /* Main */
+.wrapper{
+  height: calc(100vh - 100px - 227px - 64px);
+}
+
 h1{
   margin: 2rem 0;
 }
