--- a/src/style.css
+++ b/src/style.css
@@ -72,6 +72,25 @@ html::-webkit-scrollbar {
   background-color: #75a82d;
 }
 
+/* Loader */
+.loader-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(192, 185, 185, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+
+.spinner-border {
+      width: 150px;
+      height: 150px;
+}
+
 /* Header */
 header,
 footer{
