--- a/src/style.css
+++ b/src/style.css
@@ -60,8 +60,9 @@ html::-webkit-scrollbar {
   display: inline-block;
   margin: 0 auto;
   padding: 0.6rem 1rem;
-  color: white;
-  background-color: #8BC43E;
+  color: black;
+  background-color: #F0F0F0;
+  border: 1px solid silver;
   border-radius: 15px;
   transition: transform 0.3s ease;
   cursor: pointer;
@@ -69,12 +70,19 @@ html::-webkit-scrollbar {
 
 .btn:hover{
   transform: scale(1.1);
-  background-color: #75a82d;
+  color: white;
+  background-color: #858585;
 }
 
 .btn:disabled {
   background-color: #ccc;
   cursor: not-allowed;
+  transform: scale(1);
+  color: black;
+}
+
+.underline {
+  text-decoration: underline;
 }
 
 /* Loader */
