--- a/src/style.css
+++ b/src/style.css
@@ -85,6 +85,22 @@ html::-webkit-scrollbar {
   text-decoration: underline;
 }
 
+.w-20 {
+  width: 20%;
+}
+
+.w-25 {
+  width: 25%;
+}
+
+.w-30 {
+  width: 30%;
+}
+
+.w-50 {
+  width: 50%;
+}
+
 /* Loader */
 .loader-overlay {
   position: fixed;
@@ -205,8 +221,37 @@ h1{
   border-radius: 12px;
 }
 
-.accordion-button{
-cursor: pointer;
+.accordion-button {
+  font-weight: 600;
+}
+
+.accordion-table{
+  width: 100%;
+}
+
+td {
+  padding: 0.4rem 0;
+  color: black;
+  background-color: #fcfcfc;
+  border: 1px solid silver;
+  text-align: center;
+  margin-top: 0.5rem;
+}
+
+td.w-20{
+  border-radius: 12px 0 0 12px;
+}
+
+td.w-30{
+  border-radius: 0 12px 12px 0;
+}
+
+tr{
+  transition: transform 0.5s ease;
+}
+
+tr:hover {
+  transform: scale(1.05);
 }
 
 .row{
