--- a/src/style.css
+++ b/src/style.css
@@ -53,7 +53,12 @@ html::-webkit-scrollbar {
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
+}
 
+.flexcc{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn {
@@ -101,6 +106,10 @@ html::-webkit-scrollbar {
   width: 50%;
 }
 
+.mini-text{
+  font-size: 0.7rem;
+}
+
 /* Loader */
 .loader-overlay {
   position: fixed;
@@ -116,8 +125,8 @@ html::-webkit-scrollbar {
 }
 
 .spinner-border {
-      width: 150px;
-      height: 150px;
+  width: 150px;
+  height: 150px;
 }
 
 /* Header */
@@ -186,6 +195,7 @@ h1{
   text-align: center;
 }
 
+/* Icona e main info */
 .meteo-icon{
   width: 50%;
   border: 3px solid silver;
@@ -193,19 +203,24 @@ h1{
 }
 
 .weatemp{
-  width: 50%;
+  width: 40%;
 }
 
 .weatemp>*{
-  padding-left: 1rem;
   margin: 0.5rem 0;
 }
 
 .temperature{
   font-size: 3rem;
-  font-weight: 500;
+  margin-bottom: 0;
 }
 
+.weather{
+  font-size: 0.9rem;
+  margin-top: 0;
+}
+
+/* Tutte le ore */
 .hours-container{
   row-gap: 0.5rem;
   margin: 1.5rem 0;
@@ -221,6 +236,7 @@ h1{
   border-radius: 12px;
 }
 
+/* Accordion */
 .accordion-button {
   font-weight: 600;
 }
@@ -232,7 +248,6 @@ h1{
 td {
   padding: 0.4rem 0;
   color: black;
-  background-color: #fcfcfc;
   border: 1px solid silver;
   text-align: center;
   margin-top: 0.5rem;
@@ -254,11 +269,49 @@ tr:hover {
   transform: scale(1.05);
 }
 
-.row{
+/* dashboard cards */
+#dboard-area{
+  display: flex;
+  flex-wrap: wrap;
   row-gap: 1rem;
+  margin: 1rem -1rem;
 }
 
 .col{
   width: 50%;
   text-align: center;
+  padding: 0 1rem;
+}
+
+.card{
+  border: 1px solid silver;
+  border-radius: 15px;
+  padding: 0.5rem 1rem;
+  height: 70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f8f8f8f6;
+  font-size: 0.9rem;
+}
+
+.card .flexsec{
+  gap: 5px;
+}
+
+[class*="droplet"]{
+  color: #0051ff;
+}
+
+.fa-wind{
+  color: #858585;
+}
+
+.fa-gauge{
+  color: orange;
+}
+
+.fa-arrows-down-to-line{
+  color: darkblue;
 }
