--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,10 @@ html::-webkit-scrollbar {
 }
 
 /* Utilities */
+.d-none{
+  display: none;
+}
+
 .flexsbc{
   display: flex;
   justify-content: space-between;
@@ -195,6 +199,11 @@ h1{
   text-align: center;
 }
 
+/* Dates */
+.dates-md{
+  display: none;
+}
+
 /* Icona e main info */
 .meteo-icon{
   width: 50%;
@@ -314,4 +323,18 @@ tr:hover {
 
 .fa-arrows-down-to-line{
   color: darkblue;
+}
+
+/* Media query */
+@media (min-width: 768px) {
+  .dates-md {
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .dates.flexsec {
+    display: none;
+  }
+
 }
