--- a/src/style.css
+++ b/src/style.css
@@ -159,7 +159,7 @@ html::-webkit-scrollbar {
 /* Header */
 header,
 footer{
-  background-color: black;
+  background-color: rgb(20, 20, 20);
   padding: 1.5rem;
 }
 
@@ -354,6 +354,11 @@ tr:hover {
   align-items: center;
   background-color: #f8f8f8f6;
   font-size: 0.9rem;
+  transition: transform 0.3s ease;
+}
+
+.card:hover{
+  transform: scale(1.1);
 }
 
 .card .flexsec{
