--- a/src/style.css
+++ b/src/style.css
@@ -305,16 +305,22 @@ td {
   background-color: #F8F8F8;
 }
 
-td.w-20{
-  border-radius: 12px 0 0 12px;
-}
-
-td.w-30{
-  border-radius: 0 12px 12px 0;
-}
-
 tr{
   transition: transform 0.5s ease;
+}
+
+tr td:first-of-type{
+  border-radius: 12px 0 0 12px;
+  width: 23%;
+}
+
+tr td:last-of-type{
+  border-radius: 0 12px 12px 0;
+  width: 27%;
+}
+
+tr td:nth-of-type(2){
+  width: 50%;
 }
 
 /* dashboard cards */
